--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
+<meta charset="UTF-8">
 <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-<title>LOP Tracker | Loss Of Pay Tracker</title>
+<meta name="description" content="Loss Of Pay Tracker">
+<meta name="keywords" content="lop,LOP,Lop,loptracker,LOPTracker,Loptracker,LopTracker,lop tracker,Lop Tracker,LOP Tracker,lossofpaytracker,Lossofpaytracker,LossOfPayTracker,Loss Of Pay Tracker">
+<meta name="author" content="Suresh Palanisamy">
+<title>Loss Of Pay Tracker | LOP Tracker</title>
+<link rel="LOP Tracker Icon" href="lib/images/calendar.ico" type="image/x-icon">
 <link type="text/css" rel="stylesheet" href="app/css/main.css">
 <link type="text/css" rel="stylesheet" href="lib/css/bootstrap/bootstrap.min.css">
 <link type="text/css" rel="stylesheet" href="lib/css/fontawesome/font-awesome.min.css">
@@ -22,6 +26,7 @@
 	<script type="text/javascript" src="lib/js/bootstrap/bootstrap.min.js"></script>
 	
 	<script type="text/javascript" src="app/main.js"></script>
+	<script type="text/javascript" src="app/js/controllers/AppHeaderController.js"></script>
 	<script type="text/javascript" src="app/js/controllers/AuthenticationController.js"></script>
 	<script type="text/javascript" src="app/js/controllers/DashboardController.js"></script>
 	
@@ -29,5 +34,6 @@
 	
 	<script type="text/javascript" src="app/js/config/AppFactory.js"></script>
 	<script type="text/javascript" src="app/js/config/StorageFactory.js"></script>
+	<script type="text/javascript" src="app/js/config/AppDirectives.js"></script>
 </body>
 </html>
