Implemented adding leave popup

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,6 +10,7 @@
 <link rel="LOP Tracker Icon" href="lib/images/calendar.ico" type="image/x-icon">
 <link type="text/css" rel="stylesheet" href="app/css/main.css">
 <link type="text/css" rel="stylesheet" href="lib/css/bootstrap/bootstrap.min.css">
+<link type="text/css" rel="stylesheet" href="lib/css/bootstrap/bootstrap-datepicker.min.css">
 <link type="text/css" rel="stylesheet" href="lib/css/fontawesome/font-awesome.min.css">
 <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto"> -->
 <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato"> -->
@@ -24,6 +25,10 @@
 	<script type="text/javascript" src="lib/js/angular/angular-messages.min.js"></script>
 	<script type="text/javascript" src="lib/js/jquery/jquery-1.12.4.min.js"></script>
 	<script type="text/javascript" src="lib/js/bootstrap/bootstrap.min.js"></script>
+	<script type="text/javascript" src="lib/js/bootstrap/bootstrap-datepicker.min.js"></script>
+	<script type="text/javascript" src="lib/js/moment/moment.min.js"></script>
+	<script type="text/javascript" src="lib/js/moment/moment-timezone.min.js"></script>
+	<script type="text/javascript" src="lib/js/underscore/underscore-min.js"></script>
 	
 	<script type="text/javascript" src="app/main.js"></script>
 	<script type="text/javascript" src="app/js/controllers/AppHeaderController.js"></script>
